@@ -263,7 +263,7 @@ main(int  argc,				/* I - Number of command-line arguments (6 or 7) */
 
         options ++;
 
-	for (ptr = value; *options && *options != '+' && *optptr != '&';)
+	for (ptr = value; *options && *options != '+' && *options != '&';)
           if (ptr < (value + sizeof(value) - 1))
             *ptr++ = *options++;
 	*ptr = '\0';
